--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,11 +1,25 @@
 server {
     listen 80;
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
+    server_tokens off;
+
+    location /admin/ {
+      client_max_body_size 20M;
+      proxy_set_header Host $http_host;
+      proxy_pass http://backend:8000/admin/;
+    }
+    location /api/ {
+      client_max_body_size 20M;
+      proxy_set_header Host $http_host;
+      proxy_pass http://backend:8000/api/;
+    }
+    location /media/ {
+      alias /mediafiles/;
+    }
+    location ~/static/(admin|rest_framework) {
+      root /staticfiles/;
     }
     location / {
-        root /usr/share/nginx/html;
+        root /staticfiles/;
         index  index.html index.htm;
         try_files $uri /index.html;
         proxy_set_header        Host $host;
