--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+db.sqlite3.bak
 db.sqlite3-journal
 
 instance/
@@ -96,3 +97,6 @@ dmypy.json
 .pyre/
 
 .idea
+
+static/
+media/
